samples/_failures_safe/1761044102_45b3cf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_71b1aca3.c: In function ‘main’:
./samples/SAFE/__tmp_71b1aca3.c:144:5: error: expected declaration or statement at end of input
  144 |     }
      |     ^
